--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.11",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.25",
     "lucide": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.67.0",
+    "react-router-dom": "^7.10.0",
     "recharts": "^3.5.1",
     "tailwindcss": "^4.1.17",
     "tesseract.js": "^6.0.1"
