--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@tanstack/react-query": "^5.90.11",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
-    "lucide": "^0.555.0",
+    "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
