--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.87.0",
     "@tailwindcss/vite": "^4.1.17",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.556.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
+    "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.67.0",
