feat: increase ignore file and adjust parameter

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ dist-ssr
 *.sln
 *.sw?
 .env
+
+src/components/MockData.ts
+src/components/MockExpense.ts
+src/components/MockRevenue.ts
+src/components/Summation.tsx
