--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,5 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "NodeNext",
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   }
 }
